*Empty MediaWiki Message*

--- a/Покш_Толкан_веле_(Похвистнева_буень).mw
+++ b/Покш_Толкан_веле_(Похвистнева_буень).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Покш Толкан веле''' ({{Lang-ru|Большой Толкай}}) — эрзянь веле, [[Похвистневань буе Самарань ёнксcо|Похвистнева буесэ]], [[Самарань ёнкс]] лембеёнов.
+'''Покш Толкан веле''' ({{Lang-ru|Большой Толкай}}) — эрзянь<ref name="finugor.ru"/> веле, [[Похвистневань буе Самарань ёнксcо|Похвистнева буесэ]], [[Самарань ёнкс]] лембеёнов.
 
 Покш Толкан велесь ашти [[Покш Толкан лей|Покш Толкан леенть]] чиресэ, Чихан пандо ало. Велестэнть 32 [[вайгельпе|вп]] буенть куншка таркас - [[Похвистнево ош|Похоснёв]]с ды 131 вп [[Самар ош]]онть видс. 
 
@@ -71,13 +71,38 @@
 
 *Икелень ёвксонть коряс — модась, конань таркасо ашти Покш Толкан велесь кезэрень шкасто ульнесь ногай ''Талхан'' ханонть кедьсэ. Эрьзятненень, конатат састь тей од эрямо таркань вешнеме, ульнесь мелест рамамонзо сонзэ. Ансяк ногаесь кармась вешеме аволь ярмакт моданть кис, сон вешисэть Федуша эрзянь тейтерьканть. Ламос атятне энялдсть тейтерьканть, шкань ютазь сон прась ве мельс мартост. Истя тесэ появась Покш Толкан велесь.    
 
-*Лия конёвтнэнь коряс лиси, [[1755 ие]]нь [[эйзюрковонь 29 чи]]стэ ульнезь теезь рамамось. Эйсэнзэ сёрмадозь: 
-{{Цитатань ушодома}}«Иень1755 эйзюрковонь 29 чистэ одс лемдязь печкасонь койстэ Дмитриевень Иван максызе те рамсеманть Симбирэнь уездстсэ одс лемдязь эрьва кодат эрицятненень».
-({{Lang-ru|«Лета 1755 года марта 29 дня новокрещенной из татарской природы Иван Дмитриев дал сию купчую крестьянам Симбирского уезда разным новокрещенным деревни»}})<ref>[http://boltolkay.ru/information/history.html ИСТОРИЧЕСКАЯ СПРАВКА О СЕЛЬСКОМ ПОСЕЛЕНИИ БОЛЬШОЙ ТОЛКАЙ  {{Ref-ru}}]]</ref>.{{Цитатань пе}}Эрзятне не модатнень кис пандсть 50 [[целковой]]ть [[сия]]со. 
+*Лия конёвтнэнь коряс лиси, [[1755 ие]]нь [[эйзюрковонь 29 чи]]стэ ульнезь теезь рамамось. Эйсэнзэ сёрмадозь<ref>[http://boltolkay.ru/information/history.html ИСТОРИЧЕСКАЯ СПРАВКА О СЕЛЬСКОМ ПОСЕЛЕНИИ БОЛЬШОЙ ТОЛКАЙ  {{Ref-ru}}]</ref>: 
+{{Цитатань ушодома}} ({{Lang-myv|«Иень1755 эйзюрковонь 29 чистэ одс лемдязь печкасонь койстэ Дмитриевень Иван максызе те рамсеманть Симбирэнь уездстсэ одс лемдязь эрьва кодат эрицятненень».}}
+{{oq|ru|«Лета 1755 года марта 29 дня новокрещенной из татарской природы Иван Дмитриев дал сию купчую крестьянам Симбирского уезда разным новокрещенным деревни»}}
+{{Цитатань пе}}
+Эрзятне не модатнень кис пандсть 50 [[целковой]]ть [[сия]]со. 
+
+== Веленть эрямозо  ==
+[[2015 ие]]нь [[умарьковонь 29 чи]]стэ Покш Толкан веленьте топодсть 260 иеть<ref>[http://www.samddn.ru/novosti/novosti/erzyanskomu_selu_bolshoj_tolkaj_260_let/?type=pda Информационный портал о дружбе народов «ВСЕ МЫ - РОССИЯ!»: Эрзянскому селу Большой Толкай - 260 лет!{{Ref-ru}}]</ref>.
 
 == Содавикс ломанть те велестэнть ==
 Покш Толкан велесэ чачсть:
-* [[Журавлёвонь, Числав Григорьевич|Числав Журавлёв]] — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
+* И. Н. Бузуев<ref>[http://pohgor.ru/ourcity/bestpeople/bestpeople_161.html Сайи ГО Похвистнево. Лучшие люди города. {{Ref-ru}}]</ref> — агроном 
+* [[Журавлёвонь, Числав Григорьевич|Числав Журавлёв]]<ref name="finugor.ru">[http://finugor.ru/news/erzyanskiy-poet-chislav-zhuravlyov-k-dnyu-rozhdeniya-predstavil-svoe-tvorchestvo-v-internete finugor.ru Эрзянский поэт Числав Журавлёв к дню рождения представил свое творчество в Интернете{{Ref-ru}}]</ref> — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
+* [[Кавтаськин, Лука Семенович|Л. С. Кавтаськин]]<ref>[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Luka_Semenovich_Kavtaskin/ Финно-угорские библиотеки России // Лука Семенович КАВТАСЬКИН. Республика Мордовия {{Ref-ru}}]</ref> — ученой, тонавтыця, фольклоронь пурныця
+* А. И. Колесова, Р. А. Пыряева<ref>[http://oktobers.moy.su/index/0-7 ГБОУ Самарской области СОШ пос. Октябрьский ГО Похвистнево Самарской области ПРОЙДЕН  ПУТЬ, ДОСТОЙНЫЙ  ДОБРЫХ  СЛОВ.{{Ref-ru}}]</ref>  — тонавтыцят
+* Ю. В. Мишакин<ref>[http://boltolkay.ru/head/biography.html Администрация сельского поселения Большой Толкай Похвистневского района Самарской области. Биография  {{Ref-ru}}]</ref> — Покш Толкан веленть прявт ( 2010 ожоковонь 18 чистэ).
+* [[Радаев, Василий Кузьмич|Василий Кузьмич Радаев]]<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref><ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref> — эрзянь сёрмадей, фольклоронь пурныця, «Сияжар» морокерьксэнть сёрмадыцязо.
+* [[Раптанов, Тимофей Алексеевич| Тимофея Раптанов]]<ref>[http://www.mrkm.ru/news/?id=1014 Мордовский республиканский объединенный краеведческий музей им. И. Д. Воронина // Певец новой жизни. К 110-летию Т.А. Раптанова{{Ref-ru}}]</ref><ref>[http://slovar.cc/enc/bse/2035100.html  БСЭ Т.А. Раптанов {{Ref-ru}}]</ref>  —  эрзянь прозань сёрмадыця, куляньсёрмадей
+* А. Ф. Рябов<ref>[http://minsocdem.samregion.ru/ryabov-aleksandr-fedorovich Министерство социально-демографической и семейной политики Самарской области: Рябов Александр Федорович{{Ref-ru}}]</ref> —  ({{Lang-ru|Государственное бюджетное учреждение Самарской области «Большетолкайский пансионат для ветеранов труда (дом-интернат для престарелых и инвалидов)»}}) прявт. 
+* Ю. Ф. Рябов<ref>[http://pohvistmr.muob.ru Администрация муниципального района Похвистневский Самарской области {{Ref-ru}}]</ref><ref>[http://museum.samgd.ru/mo/pohvistnevsky/head/  Музей истории Самарского края. Рябов Юрий Фёдорович{{Ref-ru}}]</ref>— [[Похвистневань буе Самарань ёнксcо|Похостнёвонь буенть]] прявт.
+* В. Н. Старков<ref>[http://maltolkay.ru/head/biography.html Администрация сельского поселения Малый Толкай Похвистневского района Самарской области. Биография  {{Ref-ru}}]</ref> — Вишка Толкан веленть прявт ( 2010 иестэ).
+*И. С. Чагаев<ref>[https://63.мвд.рф/news/item/3454154/ Официальный сайт Министерства внутренних дел Российской Федерации. ГУ МВД России по Самарской области // Жизненный подвиг участкового милиционера (фото){{Ref-ru}}]</ref> — Ине Отечественной ойнань ветеран – МВД-нь ветеран.
+
+== Покш Толкан веледе шкинемасо  ==
+* веледенть [[Сятко (журнал-ковставкс)|«Сятко» ковставксо]] ульнесь сёрмадозь<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: КАЛЯЗЬ ПЕРАСО, лоп. 15 ]{{ref-myv}}</ref>(сёрмадома лувось ды стилистикась кадозь): 
+{{Цитатань ушодома}} ({{Lang-myv|''Покш-толкансо (Кинель-черказонь р-н Рав- Куншкань край) крй-кить апак лотксе салыть [[вирь]].
+Лесничиесь '''Бузнягай Илька''' вирень салы цятнень каршо овсе а бороце, а, сеедьстэ микшне виренть эйсэ вина бутылкань кис, кода тейсь Кажай Петянь маро.
+Кундасы вирень салынть. Алты тензэ тона вина бутылка, Нолдасы.
+Я тарка Бизнягайнень лесничеекс.<br />
+Пиле пря.''}})
+{{Цитатань пе}}
+
 
 == Сёрм.: ==
 <references />
