*Empty MediaWiki Message*

--- a/Пазялго.mw
+++ b/Пазялго.mw
@@ -75,6 +75,16 @@
 Велесэнть ули [[чувтт|чувтосто]] церькува ({{Lang-ru|Храм Рождества Христова}}<ref name="inPenza"/>), ульнесь путозь-стявтозь [[1888 ие]]стэ.
 Неень шкасто тесэ ютавтыть '''«Покш эрзянь чи»'''<ref name="Erzäks.ru">[http://erzyaks.ru/kulturno-obrazovatelnaya-programma-tvorchestvo-erzi-glazami-detej-uspeshen-v-estonii/ Erzäks.ru // «Большой Эрзянский день» в Пензенской области]{{ref-ru}}</ref><ref name="Пенза-пресс2">[http://www.penza-press.ru/lenta-novostey/98006/penzency-primut-uchastie-v-bolshom-erzyanskom-dne   Пенза-пресс: Пензенцы примут участие в «Большом Эрзянском дне» (видео)]{{ref-ru}}</ref> ([[2015 ие]]стэ сон ульнесь сисемецекс<ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: САДО, ЭРЗЯТ, ВЕСЕ САДО!]{{ref-myv}}</ref>). 
 
+== Пазялго веледе шкинемасо  ==
+* веледенть [[Сятко (журнал-ковставкс)|«Сятко» ковставксо]] ульнесь сёрмадозь<ref name="«Сятко»">[https://fennougrica.kansalliskirjasto.fi/bitstream/handle/10024/74412/Syatko_1931_no_1.pdf?sequence=1 «Сятко» No1 (24), Январь 17 чи 1931: КАЛЯЗЬ ПЕРАСО, лоп. 15 ]{{ref-myv}}</ref>(сёрмадома лувось ды стилистикась кадозь): 
+{{Цитатань ушодома}} ({{Lang-myv|''Пазялго велень (Пензань р-н) колхозонь председателесь Сарайкин (Селя-Вася)пачк иредьстэ, а ирецтэнзэ пачк палка маро чийне колхозниктне мельга.<br />Велесэнть уле шинкарька. Алькань Оря, кона кидеяк апак пель чинек венек торгуве винасо.<br />
+РЛО, варштак. Пазялго велев.<br />
+Кокай''}})
+{{Цитатань пе}}
+
+
+
+
 == Сёрм.: ==
 <references />
 
