*Empty MediaWiki Message*

--- a/Иссера_лей.mw
+++ b/Иссера_лей.mw
@@ -23,7 +23,7 @@
  |Позиционная карта = Мордовия Республикась
 }}
 
-'''Иссера''' — леесь [[Россия]]со, чуди [[Мордовия]]нь [[Ицял буе]]ва. 
+'''Иссера''' — леесь [[Россия]]со, чуди [[Мордовия]]нь [[Ицял буе]]ва. [[Инесаро лей|Инесаро леенть]] витьёнонь сянглей. 
 
 Леенть кувалмозо 20 вп, покшолмазо 81,7 вп². Лейпрязо ашти Лобаскинэнь вирень чивалгомапеле, авасоло [[Чамзабуе]]нь ды [[Рамаданбуе]]нь межава, 23 вп лембе-чилисемаёнов буень куншкасто, [[Ицяло (Ицял буе)|Ицяло]] велестэнть. Леесь чуди пелеве-чивалгомав. Ашти (Верьга) [[Рав]]<ref name='МПР России'>{{cite web|url=http://textual.ru/gvr/index.php?card=177463|title=Государственный водный реестр РФ: Иссера|archiveurl=http://www.webcitation.org/69C7OSNmj|archivedate=2012-07-16}}</ref> леенть пурнавкссо ([[Йока|Йока леенть]] пурнавксонзо теме). 
 
