*Empty MediaWiki Message*

--- a/Баеньбуе_(Орданьбуе).mw
+++ b/Баеньбуе_(Орданьбуе).mw
@@ -76,10 +76,10 @@
 
 ==Содавикс ломанть те велестэнть==
 Баеньбуе велесэнть чачсть:
-* [[Степан Эрьзя]]  — Эрзянь Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця.
-* И. С. Китайкин   —  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}). 
+* [[Степан Эрьзя]]<ref name="И жизни след оставили своей…">[http://people.uonb.ru/?p=726 «И жизни след оставили своей…»: известные люди Ульяновской области: Эрьзя (Нефёдов) Степан Дмитриевич]{{ref-ru}}</ref> — Эрзянь Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця.
+* И. С. Китайкин<ref name="МРОКМ им. И. Д. Воронина">[http://www.mrkm.ru/news/?id=1022 Мордовский республиканский объединенный краеведческий музей им. И. Д. Воронина Знатные земляки]{{ref-ru}}</ref>  —  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}). 
 *  Н. Ф. Рузавин   — операсо морыця.
-
+*  Н. И. Раскин<ref name="Центр информатизации Республики Мордовия">[http://www.delmor-ppp.ru/persons/raskin- «Центр информатизации Республики Мордовия» Раскин Николай Иванович]{{ref-ru}}</ref> — Ордань буень судья
 == Сёрм.: ==
 <references />
 
