--- a/Лувне_(Орданьбуе).mw
+++ b/Лувне_(Орданьбуе).mw
@@ -71,11 +71,11 @@
 Лувне велесэ чачсть:
 *  В.В. Маколова   — шождаатлетт 
 * А.Я. Романова  — МАССР-нь заслуженной тонавтыця  
-
+* [[Баринов, Григорий Сергеевич|Г. С. Баринов]]<ref name="МРОКМ им. И. Д. Воронина">[http://www.mrkm.ru/news/?id=1022 Мордовский республиканский объединенный краеведческий музей им. И. Д. Воронина Знатные земляки]{{ref-ru}}</ref>  —  Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}). 
 
 == Сёрм.: ==
 <references />
 
-[[Category:Мордовиянь велеть|К]]
-[[Category:Орданьбуень велеть|К]]
+[[Category:Мордовиянь велеть|Л]]
+[[Category:Орданьбуень велеть|Л]]
 [[Category:Эрзянь велеть]]
