--- a/Лямбирьбуе.mw
+++ b/Лямбирьбуе.mw
@@ -73,7 +73,7 @@
 * [[Аксеново (Лямбирьбуе)|Аксеново]] – ({{lang-ru|с. Аксеново}})
 * [[Инят (Лямбирьбуе)|Инят]] – ({{lang-ru|с. Инят}})
 * [[Кривозерье (Лямбирьбуе)|Кривозерье]] – ({{lang-ru|с. Кривозерье}})
-* [[Лямбирь (Лямбирьбуе)|Лямбирь]] – ({{lang-ru|с. Лямбирь}})
+* [[Лямбирь веле (Лямбирьбуе)|Лямбирь]] – ({{lang-ru|с. Лямбирь}})
 * [[Мельцапино (Лямбирьбуе)|Мельцапино]] – ({{lang-ru|с. Мельцапино}})
 * [[Пензятка (Лямбирьбуе)|Пензятка]] – ({{lang-ru|с. Пензятка}})
 * [[Суркино (Лямбирьбуе)|Суркино]] – ({{lang-ru|д. Суркино}})
