*Empty MediaWiki Message*

--- a/Пензятка_(Лямбирьбуе).mw
+++ b/Пензятка_(Лямбирьбуе).mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Пензятка (смустьтне)}}
-'''Пензятка''' — [[печкаст|печкасонь]] веле [[Мордовия]]нь, [[Лямбирьбуе]]сэ. 
+'''Пензятка''' — [[печкаст|печкасонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/972 Геопортал РГО: с. Пензятка] {{Ref-ru}}</ref> веле [[Мордовия]]нь, [[Лямбирьбуе]]сэ. 
 
 Ашти [[Пензятка (Инесаронь сянглей)|Пензятка леенть]] верьга чудеманзо лангсо, 26 вп буенькуншка таркастонть [[Лямбирь веле (Лямбирьбуе)|Лямбирь]] велестэнть, сэх малавикс чугункань станциясь  - [[Саран ош]]со (18 вп). Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|''([[1869 ие|1869]]) Пензятка — казязь веле 191 кудот-кардазт марто Саранонь уездстэ.''}}
