*Empty MediaWiki Message*

--- a/Лямбирь_веле_(Лямбирьбуе).mw
+++ b/Лямбирь_веле_(Лямбирьбуе).mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Лямбирь (смустьтне)}}
-'''Лямбирь велесь''' ({{Lang-ru|Лямбирь}}) — [[печкаст|печкасонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]], [[Лямбирьбуе|Лямбирьбуень]] куншка велесь. 
+'''Лямбирь велесь''' ({{Lang-ru|Лямбирь}}) — [[печкаст|печкасонь]]<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/991 Геопортал РГО: с. Лямбирь] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия Республикасонть]], [[Лямбирьбуе|Лямбирьбуень]] куншка велесь. 
 
 Ашти [[Лямбирка лей]]ненть лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
 {{Цитатань ушодома}} ({{Lang-myv|''([[1869 ие|1869]]) Лямбирь — казязь веле 174 кардаздо Саранонь уездстэ.''.}}
@@ -69,11 +69,11 @@
 Путозь-теезь [[1642 ие|иестэ]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
 
 == Веленть лемденть  ==
-Лемесь–гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>.
+Лемесь–гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>. Икелень вал '''ур''' (бура, бора, пора), ды ({{Lang-ru|«роща»}}), '''лам (лям)''' → '''лем (лайма)''' ({{Lang-ru|черемуха}}) невти таркась путозт-ставтозь [[лёмзёркс]] таркава<ref name="ГЕОПОРТАЛ"/>.
 
 == Сёрм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
-[[Category:Лямбирьбуе]]
-[[Category:Печкасонь велеть]]
+[[Category:Лямбирьбуе|Л]]
+[[Category:Печкасонь велеть|Л]]
