*Empty MediaWiki Message*

--- a/Лямбирь_веле_(Лямбирьбуе).mw
+++ b/Лямбирь_веле_(Лямбирьбуе).mw
@@ -31,7 +31,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   =
- |дата основания          =   
+ |дата основания          =   1642
  |первое упоминание       =
  |прежние имена           = 
  |статус с                = 
@@ -66,7 +66,7 @@
 {{Цитатань ушодома}} ({{Lang-myv|''([[1869 ие|1869]]) Лямбирь — казязь веле 174 кардаздо Саранонь уездстэ.''.}}
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Лямбирь, село из 174 дворов   Саранского уезда.}}
 {{Цитатань пе}}
-Путозь-теезь [[1642 ие|иестэ]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
+Путозь-теезь [[1642 ие|1642]] чополтонь печкастнесэ, конат састь чапомо Саранонь кемекстанть.
 
 == Веленть лемденть  ==
 Лемесь–гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>. Икелень вал '''ур''' (бура, бора, пора), ды ({{Lang-ru|«роща»}}), '''лам (лям)''' → '''лем (лайма)''' ({{Lang-ru|черемуха}}) невти таркась путозт-ставтозь [[лёмзёркс]] таркава<ref name="ГЕОПОРТАЛ"/>.
