*Empty MediaWiki Message*

--- a/1642_ие.mw
+++ b/1642_ие.mw
@@ -2,7 +2,7 @@
 '''1642 ие'''.
 
 == Мезе ульнесь те иестенть ==
-Путозь [[Саран ош]]ось.
+Путозь [[Саран ош]]ось, [[Лямбирь веле (Лямбирьбуе)|Лямбирь]], [[Пензятка (Лямбирьбуе)|Пензятка]] велетьне.
 
 == Чачсть ==
 ''Вн. истяжо: [[:Категория:Чачозь 1642 ие]]''
