*Empty MediaWiki Message*

--- a/Верякуши_(Ташто_Шайгабуе).mw
+++ b/Верякуши_(Ташто_Шайгабуе).mw
@@ -62,12 +62,16 @@
 '''Верякуши''' — рузонь<ref name="ГЕОПОРТАЛ">[http://geo13.ru/reestr/object/1205 Геопортал РГО: с. Верякуши] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Ташто Шайгабуе]]сэ. 
 
 Эрицятнеде: [[2002 ие]]стэ ульнесь 61 лом., 2010 иень ловномасонть - 17 ломанть.  
-== Веленть лемденть  ==
 
+Ашти [[Cенгиляй]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''([[1863 ие|1863]]) Верякуша (Криуша) — казязь веле 63 кардаздо Лугоянонь уездстэ.''}}
+{{oq|ru|В «СНМ Нижегородской губернии» (1863) – Верякуша (Криуша), деревня из 63 дворов  Лукояновского уезда.}}
+{{Цитатань пе}}
 == Содавикс ломанть те велестэнть ==
-== Веленть эрямозо  ==
+== Веленть лемденть  ==
+Лемесь саеви: ({{Lang-mdf|'''вяре'''}}) -  ({{Lang-ru|«вверху»}}) + ({{Lang-mdf|'''кужа'''}}) ~ '''куша''' -  ({{Lang-ru|«поляна»}})<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-mdf}}, {{ref-ru}}, {{ref-myv}}</ref>. 
 == Сёрм.: ==
 <references />
 
-[[Category:Мордовиянь велеть|К]]
-[[Category:Ташто Шайгабуень велеть|К]]
+[[Category:Мордовиянь велеть|В]]
+[[Category:Ташто Шайгабуень велеть|В]]
