*Empty MediaWiki Message*

--- a/Эрзятнень_раськень_коцт.mw
+++ b/Эрзятнень_раськень_коцт.mw
@@ -1,5 +1,6 @@
 [[Артовкс:Erzya Flag.svg|thumb|200px|right|border|Эрзянь Раськень коцт]]
-'''Эрзятнень раськень коцт''' ({{lang-ru|Флаг эрзянского народа}}) — раськень коцт [[эрзят]]нень, раськенть, кона эри [[Россия]]со. Ульнесь кемекстазь 1995 иестэ<ref name="Инекужо">Эрзянь Раськень Инекужось, 1995 ие, эйзюрков, 23 чи. Саран Ош{{Ref-myv}}</ref>.
+'''Эрзятнень раськень коцт'''<ref name="Голос Эрьзи">[http://goloserzi.ru/etnos/simvolika/simvolika/ © 1995-2015
+РОО «Эрзянское культурно-просветительное общество «Голос эрзи» // Символика. Эрзянский флаг{{Ref-ru}}]</ref> ({{lang-ru|Флаг эрзянского народа}}) — раськень коцт [[эрзят]]нень, раськенть, кона эри [[Россия]]со. Ульнесь кемекстазь 1995 иестэ<ref name="Инекужо">Эрзянь Раськень Инекужось, 1995 ие, эйзюрков, 23 чи. Саран Ош{{Ref-myv}}</ref>.
 
 ==Раськень коцтонть эйстэ==
 Раськень коцтонть покшолмазо — келезэ кувалмонть коряс лиси кода 1:2. Коцтось ашти колмо [[тюс]]то, верде алов: ашо, якстере, раужо. Смустень коряс: олячи, эрямо, Мастор. Неть тюстнэ саезь цёрань ды авань эрзянь оршамотнень тюсост коряс.
