*Empty MediaWiki Message*

--- a/«Масторавань_морот».mw
+++ b/«Масторавань_морот».mw
@@ -2,12 +2,12 @@
 
 Ютавтови Прявт кемекстамонь ды касомань коряс раськень культурань пельксэнть лездамонзо вельть 1992 иестэ саезь эрьва [[Ие|иень]] аштемковонь читнестэ Ульяновкс ёнксонь вейке эрзянь велесэ.
 
-Те покш чись (фестивалесь) ушодови вейке кирдастонть свал содавикс те велентень койтнень-кирдатнень эйстэ: «Тундонь ильтямонь чи», «[[Норовава|Норовавань]] чи», «Велеозкс»; полань максома койтьнэ: «Кашадо ярсамо чи», «Парень вачкамо», «Одирьвань урнемат», налксемасто, овтонь киштемасто ды лият.
+Те покш чись (фестивалесь) ушодови вейке кирдастонть свал содавикс те велентень койтнень-кирдатнень эйстэ: «Тундонь ильтямонь чи», «[[Норовава|Норовавань]] чи», «Велеозкс»; полань максома койтьнэ<ref name="Центр Льва Гумилёва">[http://www.gumilev-center.ru/v-ulyanovskoy-oblasti-syigrali-erzyanskuyu-svadbu/ Центр Льва Гумилёва. В Ульяновской области сыграли эрзянскую свадьбу]{{ref-ru}}</ref>: «Кашадо ярсамо чи», «Парень вачкамо», «Одирьвань урнемат», налксемасто, овтонь киштемасто ды лият.
 
 [[Седямо-морамось|Седямо-морамо]] невтема пурнавксонь читнестэ ютавтови эйкакштнэнь туртов конкурс «Эрзянь моро — пингеде пингес»; невтевить ломанень кедьсэ теезь теевксэст ды артыцятнень артовксост, ташто коень-эрямонь [[Авань оршамопелэст|оршавкстнэ]], [[Ярсамопель|ярсамопелькстнэ]]. Седямо-морамо невтема пурнавкссонть пряст невтить кода покш ломанть ([[15 (ловома вал)|15-с]] саезь), истя жо [[10 (ловома вал)|10]]-[[12 (ловома вал)|12]] эйкакшонь фольклоронь пурнавкст, [[Мордовия Республикась|Мордовия]] ёнкссто инжеть ды лият. Седямо-морамо невтеманть пурнавксонть тештекс-символокс ловови эрзянь оршамосо чувтонь теевкс — матрёшка, конань эрьва разнэ буйтне явить эсь ютковаст, ды конане мерить '''эрзява'''.
 
 Седямо-морамо невтема пурнавксось ютавтозель: [[Од Малыклань буе|Од Малыклань]] (1992, 1999), [[Инзейбуе|Инзей]] (1994), [[Вешкайбуе|Вешкай]] (1995), [[Кузоватонь буе|Кузоватонь]] (1996, 2007), [[Паволонь буе|Паволонь]] (1997), [[Суронь буе|Суронь]] (2000), [[Николаень буе|Николаень]] (2001) буйтнесэ.
-[[2015 ие]]стэ сон ульнесь Кузоватбуень Кивать велесэ<ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: МАСТОРАВАНЬ МОРОТ]{{ref-myv}}</ref>.
+[[2015 ие]]стэ сон ульнесь [[Кузоватонь буе]]нь [[Кивать (Кузоватонь буе)|Кивать велесэ]]<ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: МАСТОРАВАНЬ МОРОТ]{{ref-myv}}</ref>.
 
 
 == Налткеть ==
