*Empty MediaWiki Message*

--- a/Вирь_Тавла_(Кочкурбуе).mw
+++ b/Вирь_Тавла_(Кочкурбуе).mw
@@ -79,7 +79,7 @@
 ды лият:
 * Кудашкин Иван Степанович<ref>[http://ilpilot.narod.ru/man/hsu_b/e/kudashkin_is.html Герои страны: КУДАШКИН Иван Степанович {{ref-ru}}]</ref> — гвардиянь лейтенант, ливтниця, маштозь Ине ойнасонть
 * Киушкин Владимир Сергеевич <ref>[http://refdb.ru/look/1330889-pall.html ВРЕМЯ И СОБЫТИЯ. 2010 {{ref-ru}}]</ref> (1915-2000) — морыця
-
+* Бурнайкин Иван Степанович<ref>Время и события. 2016 : библиографический указатель / М-во культуры и туризма РМ, Нац. б-ка им. А. С. Пушкина РМ ; [сост. А. Н. Маланьчева]. – Саранск, 2015. – 144 с. стр.28{{ref-ru}}</ref>— краевед, РМ-нь заслуженной шкинемань важодиця (1996), РМ-нь прявтонть казязь лауреат (2005)
 
 == Содавикс таркат ==
 * [[Таштамковонь 6 чи]]стэ [[2006 ие]]стэ ульнезь панжозь [[Йовлань Олонь лемсэ Этно-кудо]].
