*Empty MediaWiki Message*

--- a/Панжиковонь_7_чи.mw
+++ b/Панжиковонь_7_чи.mw
@@ -7,6 +7,7 @@
 |EndNote=<small>[[{{CURRENTYEAR}} ие]]</small>
 }}
 == Покшчить ==
+* 120 иеть чачома чистэ [[Чесноков, Фёдор Маркелович|Фёдор Чесноковонь]] <ref>Время и события. 2016 : библиографический указатель / М-во культуры и туризма РМ, Нац. б-ка им. А. С. Пушкина РМ ; [сост. А. Н. Маланьчева]. – Саранск, 2015. – 144 с. стр.28{{ref-ru}}</ref>—эрзянь кельсэ содавикс сёрмадеенте, прозань сёрмадыцянте, драматургоньте, Сёрмадеень Кужос совицяньте (1934).
 ''Вн. истяжо: [[:Категория:Покшчить панжиковонь 7 чи]]''
 
 == Мезе ульнесь ==
