--- a/Чесноков,_Фёдор_Маркелович.mw
+++ b/Чесноков,_Фёдор_Маркелович.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Чесновковонь Фёдор Маркелович''' ([[1896 ие|1896]] [[Пенза ёнкс]]со Кшуманця веле — [[1938]] [[панжиковонь 23 чи]] [[Саран ош]]) — [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей.
+'''Чесновковонь Фёдор Маркелович''' ([[1896 ие|1896]] [[Пенза ёнкс]]со Кшуманця веле — [[1938]] [[панжиковонь 23 чи]] [[Саран ош]]) — [[эрзя]]нь<ref>Время и события. 2016 : библиографический указатель / М-во культуры и туризма РМ, Нац. б-ка им. А. С. Пушкина РМ ; [сост. А. Н. Маланьчева]. – Саранск, 2015. – 144 с. стр.28{{ref-ru}}</ref> содавикс прозань сёрмадей, драмотург, Сёрмадеень Кужос совиця (1934). 
 
 Чачсь Фёдор Чесноков [[1896 ие|1896]] [[панжиковонь 7 чи]]стэ неень [[Пенза ёнкс]]со Лопатинской буесэ Пылково (Кшуманця) велесэ сокицянь-видицянь семиясо. Сайсь се шканть кувалт аволь берянь образования, прядсь ушодксонь школа жы Кутиньской кавто иень училища. Училищанть прядомадо мейле валь куватьс важодсь ушодксонь школасо тонавтыцякс. Васенце мировой войнань иетнестэ ульнесь фронтсо.
 
@@ -38,6 +38,8 @@
 
 Ульнесь чумондозь кода ''раськень ят'' 58-6, 58-7, 58-8, 58-11 статьятьнень коряс (УК РСФСР Военной Коллегиясо Верьсе Судонть СССР)  [[панжиковонь 23 чи]]стэ 1938 иесте. Ульнесь ледезь. Реабилитировазь ансяк 19-це [[таштамков]]онь 1957 иесте.
 
+== Сёрм.: ==
+<references />
 
 [[Category:Эрзянь сёрмадейть|Ч]]
 [[Category:Эрзянь Ине ломанть|Ч]]
