*Empty MediaWiki Message*

--- a/Аоре_(Лугаян_буе).mw
+++ b/Аоре_(Лугаян_буе).mw
@@ -68,7 +68,11 @@
 Аоресэ чачсть:
 * С.С. Немцев — ульнесь вейсхозонь прявт (Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 
+
+== Веленть эрямозо ==
 [[Умарьковонь 16 чи]]стэ [[2014 ие]]стэ Аоре велесэнть ульнесь кавто покшчить –  Аоре веленть Чи, ды 100 иень чачома чистэ<ref> [http://kultura-lukoyanov.ru/2014/08/19/день-села-шандрово-лукояновского-рай/ День села Шандрово Лукояновского района и 100-летие со дня рождения Героя Социалистического труда Семёна Семёновича Немцева{{ref-ru}}]</ref> Немцевень Семён Семёновичень топодеманть.
+Аоре велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
+
 
 == Сёрм.: ==
 # Край наш Лукояновский / Г. И. Кашина, ; В. В. Комиссаров, ; Н. В. Табашин,  . -  Вып. 3. Природа и топонимика Лукояновского края . - Н.Новгород : -, 2011 . - 255 с.
