--- a/Вирь_Тавла_(Кочкурбуе).mw
+++ b/Вирь_Тавла_(Кочкурбуе).mw
@@ -62,8 +62,7 @@
 
 '''Вирь Тавла''' ({{Lang-ru|Подлесная Тавла}}) — те эрзянь веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
 
-
-Ашти [[Тавла лей]]несе, 7 [[вайгельпе]]се буенькуншкасто. Ули Культурань Кудо, школа, ды Вирь Тавлань пакшань артшкола, важоди агрофирма «Тавла». 
+Ашти [[Тавла лей]]несе, 7 [[вайгельпе]]се буенькуншкасто. Ули Культурань Кудо, школа, ды Вирь Тавлань пакшань артшкола, важоди агрофирма «Тавла». Вирь Тавла велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
 
 
 ==Содавикс ломанть те велестэнть ==
@@ -83,7 +82,7 @@
 
 == Содавикс таркат ==
 * [[Таштамковонь 6 чи]]стэ [[2006 ие]]стэ ульнезь панжозь [[Йовлань Олонь лемсэ Этно-кудо]].
-[[Image:Wood carving from Podlesnaya Tavla.JPG|thumb|left|250px|]]
+[[Image:Wood carving from Podlesnaya Tavla.JPG|thumb|left|250px|]] 
 
 == Сёрм.: ==
 <references />
