*Empty MediaWiki Message*

--- a/Якстере_Лисьмапрят_(Похвистнева_буень).mw
+++ b/Якстере_Лисьмапрят_(Похвистнева_буень).mw
@@ -75,6 +75,10 @@
 * [[Артур Моро]] (1909—1989) — [[Эрзя|эрзянь]] сёрмадей ды валморозей
 * [[Ревизов, Николай Егорович|Николай Егорович Ревизов]] (1927—2004) — эрзянь куляньсёрмадей, фотоартыця, валморозей.
 
+==Веленть эрямозо==
+Якстере Лисьмапрят велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
+
+
 == Сёрм.: ==
 <references />
 
