--- a/Кивать_(Кузоватонь_буе).mw
+++ b/Кивать_(Кузоватонь_буе).mw
@@ -66,7 +66,7 @@
 ==Веленть лемденть==
 ==Содавикс ломанть те велестэнть==
 ==Веленть эрямозо==
-Велесэ теильть крандазт ды нурт, лембе кемть.
+Икеле тесэ теильть крандазт ды нурт, лембе кемть. Кивать велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
 
 == Сёрм.: ==
 <references />
