*Empty MediaWiki Message*

--- a/Госагыр_веле_(Покш_Килейбуе).mw
+++ b/Госагыр_веле_(Покш_Килейбуе).mw
@@ -2,7 +2,7 @@
  |статус                  = веле
  |Эрзянь лем              = Госагыр
  |оригинальное название   = {{Lang-ru|с. Косогоры}}
- |изображение             = 
+ |изображение             = Gosagyr vele.jpg
  |подчинение              = 
  |мастор                  = Россия
  |герб                    = 
@@ -65,7 +65,7 @@
 Эрицятнеде: [[2001 ие]]стэ ульнесь 567 лом., 2010 иень ловномасонть кадовсть 384 ломанть. 
 == Веленть лемденть  ==
 Лемесь саеви рузонь ''косые горы''<ref name="Память, запечатленная в слове"/>, валрисьменть эйстэ (Ташто велесь ашти пандонть лангсо - {{Lang-ru|«Старая часть села  расположена на склоне холма»}}). 
-
+[[File:Gosagyr vele Lovnoma kudo.jpg|thumb|left|Госагырынь ловнома кудо — эрзянь велесэ.]]
 == Содавикс ломанть те велестэнть ==
 Госагырсэ чачсть:
 * С.Н. Леонтьев, И.С. Вдовин — Ине Отечественной ойнань улицятьне
@@ -75,6 +75,7 @@
 * В.И. Рогачёв — литератураньветицясь ды историкесь
 
 == Веленть эрямозо  ==
+[[File:Gosagyr vele Nikoljskoj cerkuva.jpg|thumb|Никольской церькувась]]
 [[1931 ие]]нь ушодомастонть велесэ ульнесь теезь 8 вейсхозт, [[1950 ие]]стэ — вейсхоз «Луч Правды»,  [[1997 ие]]стэ —  «Косогоронь» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Косогорский»}}). 
 
 Велесэнть — куншкань тонавтнема школа, Шкинемань кудо, медицинань тарка, ловномакудо, микшнема лавка, Никольской церькова (архитектурань теевкс 2-це пельксэнть [[XIX пинге|XIX п.]]).
