*Empty MediaWiki Message*

--- a/Поводеле_(Тумобуе).mw
+++ b/Поводеле_(Тумобуе).mw
@@ -59,24 +59,28 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Поводвеле''' (кортамокельсэ: Поводеле, {{Lang-ru|Поводимово}}) - сехте покш эрзянь веле<ref>[http://izvmor.ru/news/view/21816 Селу Поводимово Дубенского района — 400 лет! {{Ref-ru}}]]</ref> [[Мордовия]]со ды [[Россия]]со.
+'''Поводвеле''' (кортамокельсэ: Поводеле, {{Lang-ru|Поводимово}}) - сехте покш эрзянь веле<ref name="Izmor">[http://izvmor.ru/news/view/21816 Селу Поводимово Дубенского района — 400 лет! {{Ref-ru}}]</ref> [[Мордовия]]со ды [[Россия]]со.
 
 Ашти [[Мокшалей]] ([[Покшсельме лей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>) лангсо,  [[Тумобуе]]сэ. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Поводеле — 220 кудот марто Алатырень уездсэ''.
 
 == Веленть лемденть  ==
-Лемесь-антропоним: сюлмавозь икелень ''Бисар Поводимов<ref>[http://mnogolik-mordovia.mrsu.ru/f_Podvodimovo.htm Многоликая Мордовия: Село Поводимово  {{Ref-ru}}]]</ref>'' лемтнень марто ({{Lang-ru|"Книга письма и меры Д. Пушечникова и А. Костяева" (1624)}}) .
+Лемесь-антропоним: сюлмавозь икелень ''Бисар Поводимов<ref>[http://mnogolik-mordovia.mrsu.ru/f_Podvodimovo.htm Многоликая Мордовия: Село Поводимово  {{Ref-ru}}]</ref>'' лемтнень марто ({{Lang-ru|"Книга письма и меры Д. Пушечникова и А. Костяева" (1624)}}) .
 
 == Содавикс ломанть те велестэнть ==
 Поводелесэ чачсть:
-* [[Борчин, Валерий Викторович|Валерий Борчин]] — россиянь спортсмен, шождаатлет
+* П.М. Аверкин<ref>[http://www.mrsu.ru/ru/men/detail.php?ID=9381  МордГУ им. Н. П. Огарёва АВЕРКИН  ПАВЕЛ  МИХАЙЛОВИЧ{{Ref-ru}}]</ref> — тонавтыцят, доцент
+* [[Борчин, Валерий Викторович|Валерий Борчин]]<ref name="МКЦ">http://мордва-тольятти.рф/gordost-mordovskskoj-nacii/ МКЦ: Гордость мордовской нации  {{Ref-ru}}</ref>— россиянь спортцёра, шождаатлет
 * [[Бакич Видяй]] —  эрзянь моронь ладсий, содавикс поп морыця
-*  Н.М. Суродеев<ref>[http://www.kulyat.info/novaya-zhizn-dubenki/41_dubenki/11083-chtim-pomnim-gordimsya.html Чтим, помним, гордимся {{Ref-ru}}]]</ref> — Социалистической Важодемань Мараля
-* Ф. М. Суродеев — генерал-майор
-* Г.М. Филатов, Н.М. Филатов — скульптор
-* Н.Ф. Полежаев — Тумобуень прявт
-* Д.Ф. Волгушев — хозяйствань прявт
 * П.И. Бурнаев, А.П. Святкин — тонавтыцят
+* Д.Ф. Волгушев — хозяйствань прявт
+* [[Куликов, Евгений Андреевич|Е. А. Куликов]]<ref name="Izmor"/><ref>[http://minenergo.e-mordovia.ru/area/view/8 Министерство энергетики и тарифной политики РМ. Дубенский муниципальный район{{Ref-ru}}]</ref> — хозяйствань прявт, РСФСР-нь велень хозяйствань заслуженной важодиця 
+* И. Ф. Пальтин<ref>[http://www.knigapodviga.ru/1055107210831100109010801085-1048108311001103-10601088108610831086107410801095.html Книга подвига. Пальтин Илья Фролович{{Ref-ru}}]</ref>— ойнасо улиця ({{Lang-ru|орден Отечественной войны II степени, орден  Красной звезды, медаль « За взятие Кенигсберга»}})
+* Н.Ф. Полежаев — Тумобуень прявт
 * [[Рябовонь Людмила|Людмила Рябова]] — неень шкань [[Эрзя|эрзянь]] содавикс валморонь ладсий
+*  Н.М. Суродеев<ref>[http://www.kulyat.info/novaya-zhizn-dubenki/41_dubenki/11083-chtim-pomnim-gordimsya.html Чтим, помним, гордимся {{Ref-ru}}]</ref> — Социалистической Важодемань Мараля
+* Ф. М. Суродеев — генерал-полковник
+* Г.М. Филатов, Н.М. Филатов<ref>[http://www.face-russia.ru/persony/filatov.html Лица России. Филатов Николай Михайлович {{Ref-ru}}]</ref> — скульптор
+* А. М. Цицеров ({{Lang-ru|Священномученик протоиерей Александр}})<ref>[http://pstgu.ru/news/martir/2011/09/09/31742/ Пострадавшие за Христа {{Ref-ru}}]</ref> — церькувань важодиця
 
 == Веленть эрямозо  ==
 1930 иень ушодомсто ульнесь теезь вейсхоз, 1997 иестэ  — Ленинэнь лемсэ вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК им. Ленина}}). Неень шкасто велесэнть — лувонь школа, школа-интернат, 4 ловномакудот, Пакшань-одломанень спортонь школа ({{Lang-ru|ДЮСШ}}), спортонь клуб, 2 ведьгевть. 
