*Empty MediaWiki Message*

--- a/Сайнеле_(Тумобуе).mw
+++ b/Сайнеле_(Тумобуе).mw
@@ -62,15 +62,23 @@
 {{Лия смустьтне|Сайнеле (смустьтне)}}
 '''Сайнеле''' ({{Lang-ru|Сайнино}}) — эрзянь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/f_Sainino.htm Многоликая Мордовия: Село Сайнино] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Тумобуе]]сэ.
 
-Велесь ашти [[Промза лей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Сайнино  — 47<ref name="Память, запечатленная в слове"/> кудот марто Раторонь уездсэ''. 
+Велесь ашти [[Промза лей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. 
+Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''([[1863 ие|1863]]) — Сайнино, веле 47 кудот-кардазт Раторонь уездсэ.''}}
+{{oq|ru|«Списке населенных мест Симбирской губернии» (1863) — Сайнино, село, из 47 дворов Алатырского уезда.}}
+{{Цитатань пе}}
 
 == Веленть лемденть  ==
 Лемесь–антропоним:  кезерень эрзянь '''Сане''' лемстэнть <{{Lang-myv|сайнемс}} {{Lang-ru|«брать»}}), эли  эрямо тюрконь антропоним (сыр.-тюрк. '''сайин''' {{Lang-ru|«всякий, каждый»}})><ref name="Память, запечатленная в слове"/>.
 
 ==Содавикс ломанть те велестэнть==
 Сайнеле велесэнть чачсть:
+* Лидия Ледяйкина<ref>[http://lensov-theatre.spb.ru/pressa/lidija-ledjajkina1/ Театр имени Ленсовета. ЛИДИЯ ЛЕДЯЙКИНА{{Ref-ru}}]</ref> — актриса
+*  А. М. Пакскин<ref>[http://refdb.ru/look/1330889-pall.html ВРЕМЯ И СОБЫТИЯ. 2010 Библиографический указатель {{Ref-ru}}]</ref>— виреньваныця, советэнь важодиця, Ине ойнань улиця
+* Л. П. Ярославкина<ref>[http://mordov.izbirkom.ru/WAY/951092.html Центральная избирательная комиссия Республики Мордовия{{Ref-ru}}]</ref>— ({{Lang-ru|член Центральной избирательной комиссии Республики Мордовия}}) 
 
-
+== Веленть эрямозо  ==
+Авасоло ули '''Ош Пандо'''<ref>[http://slovar.cc/enc/bse/2026600.html БСЭ. 2012 ОШ-ПАНДО{{Ref-ru}}]</ref>кезерэнь ошке<ref>[http://geo13.ru/atlas/provinces/46 ГЕОПОРТАЛ:РГО. ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / ДУБЁНСКИЙ РАЙОН{{Ref-ru}}]. 
 
 == Сёрм.: ==
 <references />
