*Empty MediaWiki Message*

--- a/Сайнеле_(Тумобуе).mw
+++ b/Сайнеле_(Тумобуе).mw
@@ -78,7 +78,7 @@
 * Л. П. Ярославкина<ref>[http://mordov.izbirkom.ru/WAY/951092.html Центральная избирательная комиссия Республики Мордовия{{Ref-ru}}]</ref>— ({{Lang-ru|член Центральной избирательной комиссии Республики Мордовия}}) 
 
 == Веленть эрямозо  ==
-Авасоло ули '''Ош Пандо'''<ref>[http://slovar.cc/enc/bse/2026600.html БСЭ. 2012 ОШ-ПАНДО{{Ref-ru}}]</ref>кезерэнь ошке<ref>[http://geo13.ru/atlas/provinces/46 ГЕОПОРТАЛ:РГО. ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / ДУБЁНСКИЙ РАЙОН{{Ref-ru}}]. 
+Авасоло ули '''Ош Пандо'''<ref>[http://slovar.cc/enc/bse/2026600.html БСЭ. 2012 ОШ-ПАНДО{{Ref-ru}}]</ref>кезерэнь ошке<ref>[http://geo13.ru/atlas/provinces/46 ГЕОПОРТАЛ:РГО. ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / ДУБЁНСКИЙ РАЙОН{{Ref-ru}}]</ref>. 
 
 == Сёрм.: ==
 <references />
