--- a/Борчин,_Валерий_Викторович.mw
+++ b/Борчин,_Валерий_Викторович.mw
@@ -27,7 +27,7 @@
 {{пелькстамо|Европань шождаатлетэнь Чемпионат|Европань Чемпионат}}
 {{медаль|Сия|Гётеборг ош 2006| Якамо, 20 вп}}
 }}
-'''Вале́рий Ви́кторович Бо́рчин''' ( [[1986 ]][[таштамковонь 11 чи]], [[Поводвеле (Тумобуень)|Поводеле]]<ref>[http://erziapr.ru/index.php/sport/647-2011-08-25-10-43-07 Эрзянь правда. Теся анокстыть чемпионт!] {{ref-myv}}</ref>, [[Мордовия]]) — россиянь спортсмен, шождаатлет ([[спортонь якамо]]).  [[Эрзя]]<ref>[http://www.bbc.co.uk/russian/sport/2012/05/120411_russia_olympics_profile_borchin.shtml Российские надежды в Лондоне-2012: Валерий Борчин]</ref>.
+'''Вале́рий Ви́кторович Бо́рчин''' ( [[1986 ]][[таштамковонь 11 чи]], [[Поводвеле (Тумобуень)|Поводеле]]<ref>[http://erziapr.ru/index.php/sport/647-2011-08-25-10-43-07 Эрзянь правда. Теся анокстыть чемпионт!] {{ref-myv}}</ref>, [[Мордовия]]) — россиянь спортсмен, шождаатлет ([[спортонь якамо]]).  [[Эрзя]]<ref>[http://www.bbc.co.uk/russian/sport/2012/05/120411_russia_olympics_profile_borchin.shtml Российские надежды в Лондоне-2012: Валерий Борчин]</ref><ref name="МКЦ">http://мордва-тольятти.рф/gordost-mordovskskoj-nacii/ МКЦ: Гордость мордовской нации  {{Ref-ru}}</ref>.
 
 Мордовиянь спортонь якамонь школанть трявкс. Россиянь чемпион 2006 иестэ (20 [[вайгельпе|вп.]] дистанциясо).  [[2008 ие]]стэ Олимпиадань Налксемасто, [[Пекин ош]]со спортонь якамонь коряс пелькстамосо 20 вайгельпень дистанциясо сырненть саиця.
 
