/* Шенталань буень велеть */

--- a/Шенталань_буе_Самарань_ёнксcо.mw
+++ b/Шенталань_буе_Самарань_ёнксcо.mw
@@ -53,27 +53,27 @@
 
 == Шенталань буень велеть ==
 эрзянь велеть:
-* ({{lang-ru|Аделандовка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Андреевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Багана}} - {{lang-myv|Баганя веле}}) - [[Баганя веле (Шенталань буе)|Баганя веле]]
-* ({{lang-ru|Васильевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Вязовка}} - {{lang-myv|?}}) - [[Вязовка  (Шенталань буе)|Вязовка]] 
-* ({{lang-ru|Верхняя Хмелевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Кузминовка}} - {{lang-myv|?}})
-* ({{lang-ru|Нижняя Хмелевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Новое Поле}} - {{lang-myv|?}}) 
-* ({{lang-ru|Новая Шентала}} - {{lang-myv|?}}) 
-* ({{lang-ru|Подлесная Родина}} - {{lang-myv|?}}) 
-* ({{lang-ru|Рыжевой}} - {{lang-myv|?}}) 
-* ({{lang-ru|Сенькино}} - {{lang-myv|?}}) 
-* ({{lang-ru|Старое Суркино}} - {{lang-myv|?}}) 
-* ({{lang-ru|Старая Шентала}} - {{lang-myv|?}}) 
-* ({{lang-ru|Семеново-Шарла}} - {{lang-myv|?}}) 
-* ({{lang-ru|Фадеевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Чёрная Речка}} - {{lang-myv|?}}) 
+* ({{lang-ru|Аделандовка}} - {{lang-myv|[[Аделандовка (Шенталань буе)|Аделандовка]]}}) 
+* ({{lang-ru|Андреевка}} - {{lang-myv|[[Андреевка (Шенталань буе)|Андреевка]]}}) 
+* ({{lang-ru|Багана}} - {{lang-myv|[[Баганя веле (Шенталань буе)|Баганя веле]]}})
+* ({{lang-ru|Васильевка}} - {{lang-myv|[[Васильевка (Шенталань буе)|Васильевка]]}}) 
+* ({{lang-ru|Вязовка}} - {{lang-myv|[[Вязовка  (Шенталань буе)|Вязовка]] }}) 
+* ({{lang-ru|Верхняя Хмелевка}} - {{lang-myv|[[Верхняя Хмелевка (Шенталань буе)|Верхняя Хмелевка]]}}) 
+* ({{lang-ru|Кузминовка}} - {{lang-myv|[[Кузминовка (Шенталань буе)|Кузминовка]]}})
+* ({{lang-ru|Нижняя Хмелевка}} - {{lang-myv|[[Нижняя Хмелевка (Шенталань буе)|Нижняя Хмелевка]]}}) 
+* ({{lang-ru|Новое Поле}} - {{lang-myv|[[Новое Поле (Шенталань буе)|Новое Поле]]}}) 
+* ({{lang-ru|Новая Шентала}} - {{lang-myv|[[Новая Шентала (Шенталань буе)|Новая Шентала]]}}) 
+* ({{lang-ru|Подлесная Родина}} - {{lang-myv|[[Подлесная Родина (Шенталань буе)|Подлесная Родина]]}}) 
+* ({{lang-ru|Рыжевой}} - {{lang-myv|[[Рыжевой (Шенталань буе)|Рыжевой]]}}) 
+* ({{lang-ru|Сенькино}} - {{lang-myv|[[Сенькино (Шенталань буе)|Сенькино]]}}) 
+* ({{lang-ru|Старое Суркино}} - {{lang-myv|[[Старое Суркино (Шенталань буе)|Старое Суркино]]}}) 
+* ({{lang-ru|Старая Шентала}} - {{lang-myv|[[Старая Шентала (Шенталань буе)|Старая Шентала]]}}) 
+* ({{lang-ru|Семеново-Шарла}} - {{lang-myv|[[Семеново-Шарла (Шенталань буе)|Семеново-Шарла]]}}) 
+* ({{lang-ru|Фадеевка}} - {{lang-myv|[[Фадеевка (Шенталань буе)|Фадеевка]]}}) 
+* ({{lang-ru|Чёрная Речка}} - {{lang-myv|[[Чёрная Речка (Шенталань буе)|Чёрная Речка]]}}) 
 
 човор велеть:
-* ({{lang-ru|Тимяшево}} - {{lang-myv|?}}, {{lang-cv|Тимĕш}})  - (эрить эрзят, ветькеть)
-* ({{lang-ru|Шентала}} - {{lang-myv|Шентала веле}}, {{lang-cv|Шăнтал ял тăрăхĕ}}) - (эрить эрзят, рузт, ветькеть, печкаст)
+* ({{lang-ru|Тимяшево}} - {{lang-myv|[[Тимяшево (Шенталань буе)|Тимяшево]]}}, {{lang-cv|Тимĕш}})  - (эрить эрзят, ветькеть)
+* ({{lang-ru|Шентала}} - {{lang-myv|[[Шентала веле (Шенталань буе)|Шентала веле]]}}, {{lang-cv|Шăнтал ял тăрăхĕ}}) - (эрить эрзят, рузт, ветькеть, печкаст)
 
 [[Категория:Самарань ёнксонь буетне|Ш]]
