/* Исаклань буень велеть */

--- a/Исаклань_буе_Самарань_ёнксcо.mw
+++ b/Исаклань_буе_Самарань_ёнксcо.mw
@@ -50,24 +50,24 @@
 Буенть раськень потмоксось (2010 иень ловномастонть): [[рузт]] — 5 519 лом. (41,4 %), [[ветькеть]] — 4 773 (35,8 %), [[эрзят]] — 2 262 (17 %), [[печкаст]] — 362 (2,7 %) ды лият — 3,1 %. 
 == Исаклань буень велеть ==
 эрзянь велеть:
-* ({{lang-ru|Багряш}} - {{lang-myv|?}}) 
-* ({{lang-ru|Владимировка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Ивановка}} - {{lang-myv|?}})
-*  ({{lang-ru|Лесной}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Мордово-Аделяково}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Мордово-Ишутино}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Нижняя Алексеевка}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Новый Байтермиш}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Пригорки}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Средняя Алексеевка}} - {{lang-myv|?}})
-*  ({{lang-ru|Старое Вечканово}} - {{lang-myv|?}}) 
-*  ({{lang-ru|Чёрная Речка}} - {{lang-myv|?}}) 
+* ({{lang-ru|Багряш}} - {{lang-myv|[[Багряш (Исаклань буе)|Багряш]]}}) 
+* ({{lang-ru|Владимировка}} - {{lang-myv|[[Владимировка (Исаклань буе)|Владимировка]]}}) 
+* ({{lang-ru|Ивановка}} - {{lang-myv|[[Ивановка (Исаклань буе)|Ивановка]]}})
+*  ({{lang-ru|Лесной}} - {{lang-myv|[[Лесной (Исаклань буе)|Лесной]]}}) 
+*  ({{lang-ru|Мордово-Аделяково}} - {{lang-myv|[[Мордово-Аделяково (Исаклань буе)|Мордово-Аделяково]]}}) 
+*  ({{lang-ru|Мордово-Ишутино}} - {{lang-myv|[[Мордово-Ишутино (Исаклань буе)|Мордово-Ишутино]]}}) 
+*  ({{lang-ru|Нижняя Алексеевка}} - {{lang-myv|[[Нижняя Алексеевка (Исаклань буе)|Нижняя Алексеевка]]}}) 
+*  ({{lang-ru|Новый Байтермиш}} - {{lang-myv|[[Од Байтермиш (Исаклань буе)|Од Байтермиш]]}}) 
+*  ({{lang-ru|Пригорки}} - {{lang-myv|[[Пригорки (Исаклань буе)|Пригорки]]}}) 
+*  ({{lang-ru|Средняя Алексеевка}} - {{lang-myv|[[Средняя Алексеевка (Исаклань буе)|Средняя Алексеевка]]}})
+*  ({{lang-ru|Старое Вечканово}} - {{lang-myv|[[Ташто Вечканово (Исаклань буе)|Ташто Вечканово]]}}) 
+*  ({{lang-ru|Чёрная Речка}} - {{lang-myv|[[Чёрная Речка (Исаклань буе)|Чёрная Речка]]}}) 
 
 човор велеть:
-* ({{lang-ru|Исаклы}} - {{lang-myv|?}}) - (эрить эрзят, рузт, ветькеть, печкаст)
-* ({{lang-ru|Красный Берег}} - {{lang-myv|?}}) - (эрить эрзят, ветькеть)
-*  ({{lang-ru|Семь Ключей}} - {{lang-myv|?}}) - (эрить эрзят, украинецт)
-*  ({{lang-ru|Соксий}} - {{lang-myv|?}}) - (эрить эрзят, рузт, ветькеть, печкаст, украинецт, башкирт)
+* ({{lang-ru|Исаклы}} - {{lang-myv|[[Исакла веле (Исаклань буе)|Исакла веле]]}}) - (эрить эрзят, рузт, ветькеть, печкаст)
+* ({{lang-ru|Красный Берег}} - {{lang-myv|[[Красный Берег (Исаклань буе)|Красный Берег]]}}) - (эрить эрзят, ветькеть)
+*  ({{lang-ru|Семь Ключей}} - {{lang-myv|[[Семь Ключей (Исаклань буе)|Семь Ключей]]}}) - (эрить эрзят, украинецт)
+*  ({{lang-ru|Соксий}} - {{lang-myv|[[Соксий (Исаклань буе)|Соксий]]}}) - (эрить эрзят, рузт, ветькеть, печкаст, украинецт, башкирт)
 
 
 [[Категория:Самарань ёнксонь буетне|И]]
