*Empty MediaWiki Message*

--- a/Пря.mw
+++ b/Пря.mw
@@ -1,3 +1,4 @@
+[[Артовкс:Anuak Tribe, Dimma (13668104994).jpg|кенжешка|Пря]]
 '''Пря''' — ломанень рунгонть пелькс, али [[Ракшат|ракшань]], конатасонть ашти [[удеме]], неемань-сельмень пелькстнэ, танстень, марямонь ды [[курго]].
 
 Башка прясь ули [[Карязовтне|карязовтнень]] ды [[Сукс-унжа|сукс-унжатнень]].
