--- a/Репс.mw
+++ b/Репс.mw
@@ -57,6 +57,7 @@
 Brassica rapa (xndr).jpg|Репсэсь цецясо
 Brassicarapa.jpg|Репсэсь видьмензэ   
 Malselvneper.JPG|Репсэнь марть
+Apis mellifera - Brassica napus - Valingu.jpg|
 </gallery>
 
 == Сёрм. ==
